// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addDevice inserts item to DynamoDB for valid request 1`] = `
{
  "body": "{"ip":"10.0.0.1","name":"test-device-1","tenantId":"test-tenant-12345","id":"test-random-ulid-value","hashKey":"test-tenant-12345-Devices","rangeKey":"test-random-ulid-value","created":"2022-03-11T06:28:16.263Z","updated":"2022-03-11T06:28:16.263Z"}",
  "headers": {
    "Access-Control-Allow-Origin": "*",
    "Content-Type": "application/json",
  },
  "isBase64Encoded": false,
  "statusCode": 200,
}
`;

exports[`addDevice inserts item to DynamoDB for valid request: dynamodb insert payload 1`] = `
[
  [
    {
      "Item": {
        "created": "2022-03-11T06:28:16.263Z",
        "hashKey": "test-tenant-12345-Devices",
        "id": "test-random-ulid-value",
        "ip": "10.0.0.1",
        "name": "test-device-1",
        "rangeKey": "test-random-ulid-value",
        "tenantId": "test-tenant-12345",
        "updated": "2022-03-11T06:28:16.263Z",
      },
      "TableName": "Device",
    },
  ],
]
`;

exports[`addDevice inserts item to DynamoDB for valid request: sqs notification payload 1`] = `
[
  [
    {
      "created": "2022-03-11T06:28:16.263Z",
      "hashKey": "test-tenant-12345-Devices",
      "id": "test-random-ulid-value",
      "ip": "10.0.0.1",
      "name": "test-device-1",
      "rangeKey": "test-random-ulid-value",
      "tenantId": "test-tenant-12345",
      "updated": "2022-03-11T06:28:16.263Z",
    },
  ],
]
`;

exports[`addDevice returns error for invalid json 1`] = `
{
  "body": "{"body":"Invalid JSON payload","statusCode":400,"statusType":"Bad Request"}",
  "headers": {
    "Access-Control-Allow-Origin": "*",
    "Content-Type": "application/json",
  },
  "statusCode": 400,
}
`;

exports[`addDevice returns error for missing name field 1`] = `
{
  "body": "{"body":"Missing mandatory fields: name, ip for device creation","statusCode":400,"statusType":"Bad Request"}",
  "headers": {
    "Access-Control-Allow-Origin": "*",
    "Content-Type": "application/json",
  },
  "statusCode": 400,
}
`;
